<resources>
    <string name="app_name">Pillcare_Capstone</string>
    <string name="goToLoginForm">로그인 화면으로</string>
    <string name="infoPasswordChangedPleaseLogin">새 비밀번호로 다시 로그인 해주세요..</string>
    <string name="passwordChangeSuccess">비밀번호 변경이 완료되었습니다.</string>
    <string name="changePasswordTextTitleText">비밀번호 재설정</string>
    <string name="newPassword">새 비밀번호</string>
    <string name="enterPassword">비밀번호 입력</string>
    <string name="reEnterPassword">비밀번호 재입력</string>
    <string name="goToPreviousPage">이전</string>
    <string name="comfirmNewPassword">새 비밀번호 확인</string>
    <string name="goToNextPage">다음</string>
    <string name="findPasswordTextTitleText">비밀번호 찾기</string>
    <string name="stringId">아이디</string>
    <string name="stringPasswrod">비밀번호</string>
    <string name="enterId">아이디 입력 (5~20자)</string>
    <string name="duplicateCheck">중복 확인</string>
    <string name="stringPhoneNumber">전화번호</string>
    <string name="enterPhoneNumber">휴대폰 번호 입력 (‘-’ 제외 11자리 입력)</string>
    <string name="getVerificationCode">인증번호 전송</string>
    <string name="stringVerificationCode">인증번호</string>
    <string name="EnterSixOfNumber">숫자 6자리 입력</string>
    <string name="verificationCodeCheck">인증번호 확인</string>
    <string name="pillCare">Pillcare</string>
    <string name="errorIdOrPassword">아이디 또는 비밀번호가 올바르지 않습니다. 다시 시도해주세요.</string>
    <string name="stringLogin">로그인</string>
    <string name="stringOr">or</string>
    <string name="loginToKaKaoTalk">카카오톡으로 로그인</string>
    <string name="loginToNaver">네이버로 로그인</string>
    <string name="dontHaveAccount">계정이 없으시나요?</string>
    <string name="stringSignUp">회원가입</string>
    <string name="signUpTitleText">계정 생성</string>
    <string name="stringName">이름</string>
    <string name="enterName">이름 입력</string>
    <string name="confirmPassword">비밀번호 확인</string>
    <string name="signUpCancel">가입취소</string>
    <string name="careTargetTitle">케어 대상자 정보 입력</string>
    <string name="guardianMemoText">보호자 메모</string>
    <string name="guardianMemoEditText">ex) 식사 후 30분 내에 복용하도록 안내 필요</string>
    <string name="guardianMemoPlus">보호자 메모 추가</string>
    <string name="stringWelcome">환영합니다!</string>
    <string name="signUpSuccess">계정가입이 완료되었습니다.</string>
    <string name="stringMyInformation">내 정보</string>
    <string name="stringHome">홈</string>
    <string name="stringSetting">설정</string>
    <string name="medicinePlusButton">약추가버튼</string>
    <string name="stringToolbarCareTargetImage">케어 대상자 유저 이미지입니다.</string>
    <string name="stringToolbarAlarmImageButton">알람 이미지 버튼입니다</string>
    <string name="stringSuccess">완료</string>
    <string name="homeBgImage">홈 화면 배경</string>
    <string name="medicineTimePlusButton">약시간추가버튼</string>
    <string name="stringDelete">삭제</string>
    <string name="stringModify">수정</string>
    <string name="stringSetPillTime">약 복용 시간을 설정해주세요.</string>
    <string name="stringMedicineDeleteEfab">약 삭제 버튼</string>
    <string name="stringMedicineModifyEfab">약 수정 버튼</string>
    <string name="stringMedicineTimeDeleteEfab">약 시간 삭제 버튼</string>
    <string name="stringCareTargetName">케어 대상자 이름</string>
    <string name="stringCareTargetPhoneNumber">케어 대상자 전화번호</string>
    <string name="stringGuardianMemo">보호자 메모</string>
    <string name="stringAccount">계정</string>
    <string name="stringSettingChangeMyInfo">내 정보 변경</string>
    <string name="stringSettingChangeCareTarget">케어 대상자 정보 변경</string>
    <string name="stringSettingChangePassword">비밀번호 변경</string>
    <string name="stringSetPushAlarm">푸쉬 알림 설정</string>
    <string name="stringInfoAndLicense">정보 및 라이선스</string>
    <string name="stringVersionOfApp">앱 버전 정보</string>
    <string name="stringLicense">오픈소스 라이선스</string>
    <string name="stringLogout">로그아웃</string>
    <string name="stringConfirm">확인</string>
</resources>