<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".find_password.FindPasswordActivityOne">


    <!-- 비밀번호 찾기  -->
    <TextView
        android:id="@+id/findPasswordTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.1"
        android:text="@string/findPasswordTextTitleText"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <!-- 아이디 입력  -->
    <TextView
        android:id="@+id/findPasswordIdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/findPasswordIdLinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/findPasswordTitleText"
        app:layout_constraintVertical_bias="0.01"
        android:layout_marginTop="15dp"
        android:text="@string/stringId"
        android:textSize="14sp"
        android:textColor="#085408"
        android:textStyle="bold"
        android:layout_marginLeft="40dp"/>
    <LinearLayout
        android:id="@+id/findPasswordIdLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="@id/findPasswordPhoneNumberText"
        app:layout_constraintTop_toBottomOf="@id/findPasswordIdText"
        app:layout_constraintVertical_bias="0.01">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/findPasswordIdLayout"
            app:errorEnabled="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginStart="30dp"
            android:paddingHorizontal="10dp"
            app:counterMaxLength="20"
            app:counterEnabled="true">
            <EditText
                android:id="@+id/findPasswordIdEditText"
                android:background="@color/white"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enterId"
                android:textSize="13sp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:background="@drawable/main_color_inputbox"
            android:layout_marginEnd="35dp"
            android:text="@string/duplicateCheck"
            android:textSize="10dp"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- 전화번호 입력  -->
    <TextView
        android:id="@+id/findPasswordPhoneNumberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/findPasswordIdLinearLayout"
        app:layout_constraintVertical_bias="0.01"
        android:text="@string/stringPhoneNumber"
        android:textSize="14sp"
        android:textColor="#085408"
        android:textStyle="bold"
        android:layout_marginLeft="40dp"/>
    <LinearLayout
        android:id="@+id/findPasswordPhoneNumberLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/findPasswordPhoneNumberText"
        app:layout_constraintBottom_toTopOf="@id/findPasswordVerificationCodeText"
        app:layout_constraintVertical_bias="0.1">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/findPasswordPhoneNumberLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:paddingHorizontal="10dp"
            android:elevation="10dp">
            <EditText
                android:id="@+id/findPasswordPhoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:maxLength="11"
                android:hint="@string/enterPhoneNumber"
                android:paddingEnd="10dp"
                android:inputType="number"
                android:textSize="12sp"/>

        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:background="@drawable/main_color_inputbox"
            android:layout_marginEnd="35dp"
            android:text="@string/getVerificationCode"
            android:textSize="10dp"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </LinearLayout>

    <!-- 인증번호 입력  -->
    <TextView
        android:id="@+id/findPasswordVerificationCodeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/findPasswordVerificationCodeLinearLayout"
        app:layout_constraintTop_toBottomOf="@id/findPasswordPhoneNumberLinearLayout"
        app:layout_constraintVertical_bias="0.01"
        android:layout_marginTop="15dp"
        android:text="@string/stringVerificationCode"
        android:textSize="14sp"
        android:textColor="#085408"
        android:textStyle="bold"
        android:layout_marginLeft="40dp"/>
    <LinearLayout
        android:id="@+id/findPasswordVerificationCodeLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/findPasswordVerificationCodeText"
        app:layout_constraintVertical_bias="0.1">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/findPasswordVerificationCodeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:paddingHorizontal="10dp">
            <EditText
                android:id="@+id/findPasswordVerificationCodeEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/EnterSixOfNumber"
                android:inputType="number"
                android:textSize="10sp"/>

        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:background="@drawable/main_color_inputbox"
            android:layout_marginEnd="35dp"
            android:text="@string/verificationCodeCheck"
            android:textSize="10dp"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- 이전, 다음 버튼  -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/findPasswordlastPageAndNextLayout"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/findPasswordVerificationCodeLinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="56dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/findPasswordlastPageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:background="@drawable/main_color_inputbox"
            android:padding="5dp"
            android:elevation="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/findPasswordNextButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:text="@string/goToPreviousPage"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/findPasswordNextButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:scaleType="centerCrop"
            android:background="@drawable/main_color_inputbox"
            android:padding="1dp"
            android:elevation="8dp"
            app:layout_constraintStart_toEndOf="@id/findPasswordlastPageButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginStart="60dp"
            android:text="@string/goToNextPage"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>