<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".find_password.FindPasswordActivityTwo">

    <!-- 비밀번호 재설정  -->
    <TextView
        android:id="@+id/changePasswordTextTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.1"
        android:text="@string/changePasswordTextTitleText"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <!-- 비밀번호 입력  -->
    <TextView
        android:id="@+id/changePasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changePasswordTextTitleText"
        app:layout_constraintVertical_bias="0.01"
        android:layout_marginTop="15dp"
        android:text="@string/newPassword"
        android:textSize="14sp"
        android:textColor="#085408"
        android:textStyle="bold"
        android:layout_marginLeft="40dp" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/changePasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changePasswordText"
        app:layout_constraintVertical_bias="0.1"
        android:layout_marginHorizontal="30dp"
        android:paddingHorizontal="10dp"
        android:paddingBottom="5dp"
        android:elevation="10dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/gray">
        <EditText
            android:id="@+id/changePasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:inputType="textPassword"
            android:hint="@string/enterPassword"
            android:textSize="13sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- 비밀번호 확인  -->
    <TextView
        android:id="@+id/confirmChangePasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changePasswordLayout"
        app:layout_constraintVertical_bias="0.01"
        android:layout_marginTop="15dp"
        android:text="@string/comfirmNewPassword"
        android:textSize="14sp"
        android:textColor="#085408"
        android:textStyle="bold"
        android:layout_marginLeft="40dp" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmChangePasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmChangePasswordText"
        app:layout_constraintVertical_bias="0.1"
        android:layout_marginHorizontal="30dp"
        android:paddingHorizontal="10dp"
        android:paddingBottom="5dp"
        android:elevation="10dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/gray">
        <EditText
            android:id="@+id/confirmChangePasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:inputType="textPassword"
            android:hint="@string/reEnterPassword"
            android:textSize="13sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- 가입 취소, 다음 버튼  -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/changePasswordlastButtonAndNextButtonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/confirmChangePasswordLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="56dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/changePasswordlastButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:scaleType="centerCrop"
            android:background="@drawable/main_color_inputbox"
            android:padding="5dp"
            android:elevation="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/changePasswordlastButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:text="@string/goToPreviousPage"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/changePasswordNextButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:scaleType="centerCrop"
            android:background="@drawable/main_color_inputbox"
            android:padding="1dp"
            android:elevation="8dp"
            app:layout_constraintStart_toEndOf="@id/changePasswordlastButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginStart="60dp"
            android:text="@string/goToNextPage"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>