<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_up.SignUpActivityTwo">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- 케어 대상자 정보 입력  -->
        <TextView
            android:id="@+id/careTargetTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="80dp"
            app:layout_constraintHorizontal_bias="0.1"
            android:text="@string/careTargetTitle"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <!-- 환자 이름 입력  -->
        <TextView
            android:id="@+id/careTargetNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/careTargetNameLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/careTargetTitle"
            app:layout_constraintVertical_bias="0.3"
            android:text="@string/stringName"
            android:textSize="14sp"
            android:textColor="#085408"
            android:textStyle="bold"
            android:layout_marginLeft="40dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/careTargetNameLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/careTargetNameText"
            app:layout_constraintVertical_bias="0.1"
            android:layout_marginHorizontal="30dp"
            android:paddingHorizontal="10dp"
            android:paddingBottom="5dp"
            android:elevation="10dp">
            <EditText
                android:id="@+id/careTargetNameEditText"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterName"
                android:textSize="13sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- 환자 전화번호 입력 -->
        <TextView
            android:id="@+id/careTargetPhoneNumberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/careTargetPhoneNumberLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/careTargetNameLayout"
            app:layout_constraintVertical_bias="0.1"
            android:text="@string/stringPhoneNumber"
            android:textSize="14sp"
            android:textColor="#085408"
            android:textStyle="bold"
            android:layout_marginLeft="40dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/careTargetPhoneNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="@id/guardianMemoText"
            app:layout_constraintTop_toBottomOf="@id/careTargetPhoneNumberText"
            app:layout_constraintVertical_bias="0.01"
            android:layout_marginHorizontal="30dp"
            android:paddingHorizontal="10dp"
            android:paddingBottom="5dp"
            android:elevation="10dp">
            <EditText
                android:id="@+id/careTargetPhoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:maxLength="11"
                android:hint="@string/enterPhoneNumber"
                android:paddingEnd="10dp"
                android:inputType="number"
                android:textSize="13sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- 보호자메모 입력 -->
        <TextView
            android:id="@+id/guardianMemoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/careTargetPhoneNumberLayout"
            app:layout_constraintVertical_bias="0.1"
            android:text="@string/guardianMemoText"
            android:textSize="14sp"
            android:textColor="#085408"
            android:textStyle="bold"
            android:layout_marginLeft="40dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/guardianMemoPlusRecyclerView"
            app:layout_constraintTop_toBottomOf="@+id/guardianMemoText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ImageButton
            android:id="@+id/guardianMemoPlusButton"
            android:layout_marginVertical="17dp"
            android:layout_marginEnd="50dp"
            android:translationX="-70dp"
            android:layout_width="17dp"
            android:layout_height="17dp"
            app:layout_constraintTop_toBottomOf="@id/guardianMemoText"
            app:layout_constraintStart_toEndOf="@id/guardianMemoPlusRecyclerView"
            android:background="@drawable/ic_plus"
            android:contentDescription= "@string/guardianMemoPlus"/>

        <!-- 보호자 메모 추가 -->


        <!-- 이전, 회원가입 버튼  -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/careTargetlastPageAndSuccessLayout"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/guardianMemoPlusRecyclerView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="56dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/careTargetpreviousPageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:background="@drawable/main_color_inputbox"
                android:padding="5dp"
                android:elevation="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/careTargetSuccessButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:text="@string/goToPreviousPage"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/careTargetSuccessButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:scaleType="centerCrop"
                android:background="@drawable/main_color_inputbox"
                android:padding="1dp"
                android:elevation="8dp"
                app:layout_constraintStart_toEndOf="@id/careTargetpreviousPageButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:layout_marginStart="60dp"
                android:text="@string/stringSignUp"
                android:textColor="@color/white"
                android:textStyle="bold"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/spaceLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/careTargetlastPageAndSuccessLayout"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>