<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".find_password.FindPasswordActivityThree">

    <TextView
        android:id="@+id/changePasswordSuccessMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/changePasswordSuccessSubTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.94"
        android:text="@string/passwordChangeSuccess"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/changePasswordSuccessSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changePasswordSuccessMainTitle"
        app:layout_constraintBottom_toBottomOf="@id/changePasswordSuccessButton"
        app:layout_constraintVertical_bias="0.01"
        android:text="@string/infoPasswordChangedPleaseLogin"
        android:textColor="@color/gray"
        android:textSize="15sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changePasswordSuccessButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:background="@drawable/main_color_inputbox"
        android:padding="5dp"
        android:elevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changePasswordSuccessSubTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_bias="0.3"
        android:text="@string/goToLoginForm"
        android:textColor="@color/white"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>